# kjxlkj

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BUILD.md  Cargo.toml  Dockerfile  Dockerfile.verify  Dockerfile.visual  LICENSE  QWEN.md  README.md  TODO.md  TRACEABILITY.md  docker-compose.verify.yml  docker-compose.yml  package-lock.json  package.json  tsconfig.json  verify.sh  vite.config.ts  vitest.config.ts
benches/: Cargo.toml
benches/benches/: performance.rs
src/crates/app/kjxlkj/: Cargo.toml  README.md
src/crates/app/kjxlkj-server/: Cargo.toml
src/crates/app/kjxlkj-test-harness/: Cargo.toml
src/crates/auth/kjxlkj-auth/: Cargo.toml
src/crates/automation/kjxlkj-automation/: Cargo.toml
src/crates/core/kjxlkj-core/: Cargo.toml  README.md
src/crates/core/kjxlkj-core-edit/: Cargo.toml  README.md
src/crates/core/kjxlkj-core-state/: Cargo.toml  README.md
src/crates/core/kjxlkj-core-text/: Cargo.toml  README.md
src/crates/db/kjxlkj-db/: Cargo.toml
src/crates/kjxlkj/: Cargo.toml
src/crates/kjxlkj-cmd/: Cargo.toml
src/crates/kjxlkj-cmd/src/: command.rs  completion.rs  completion_registry.rs  completion_types.rs  global.rs  lib.rs  parser.rs  parser_helpers.rs  parser_types.rs  range.rs  range_expand.rs  range_types.rs  substitute.rs  substitute_types.rs  tests.rs
src/crates/kjxlkj-core/: Cargo.toml
src/crates/kjxlkj-core-edit/: Cargo.toml
src/crates/kjxlkj-core-edit/src/: autopairs.rs  block_ops.rs  buffer.rs  change_event.rs  char_find.rs  clipboard.rs  cmdline_window.rs  comment.rs  completion.rs  cursor.rs  cursor_ops.rs  cursor_overlay.rs  diff.rs  diff_types.rs  edit.rs  edit_op.rs  edit_tests.rs  editing_features.rs  executor.rs  fold.rs  fold_types.rs  format.rs  highlight.rs  highlight_types.rs  indent.rs  indent_types.rs  insert_ops.rs  keybinding_full.rs  lib.rs  motion.rs  motion_exec.rs  motion_extended.rs  motion_extra.rs  motion_handler.rs  motion_helpers.rs  motion_line.rs  motion_misc.rs  motion_result.rs  motion_search.rs  motion_tests.rs  (+48 more)
src/crates/kjxlkj-core-edit/tests/: comprehensive.rs  edit_tests.rs  edit_tests_ext.rs  extended.rs  motion.rs  motions.rs  operator.rs  operators.rs  operators_tests.rs  operators_tests_ext.rs  tag_objects.rs  text_object.rs  text_objects.rs
src/crates/kjxlkj-core-mode/: Cargo.toml
src/crates/kjxlkj-core-mode/src/: autopairs.rs  cmdline_parser.rs  command.rs  command_helpers.rs  command_tests.rs  completion.rs  completion_engine.rs  cursor_rendering.rs  dispatch.rs  event.rs  execution.rs  function.rs  handler.rs  history.rs  input.rs  insert.rs  insert_completion.rs  insert_mode_ext.rs  insert_newline.rs  intent.rs  intent_tests.rs  key.rs  key_motion.rs  keymap.rs  lib.rs  mode_config.rs  mode_keybindings.rs  mode_state.rs  mode_tests.rs  normal.rs  normal_commands.rs  normal_g_z.rs  normal_keys.rs  normal_nav.rs  normal_single.rs  normal_tests.rs  parser.rs  parser_modes.rs  parser_normal.rs  parser_operators.rs  (+18 more)
src/crates/kjxlkj-core-mode/tests/: comprehensive.rs  extended.rs  mode_tests.rs  parser.rs
src/crates/kjxlkj-core-state/: Cargo.toml  Session.vim
src/crates/kjxlkj-core-state/src/: abbreviation.rs  action_dispatch.rs  action_dispatch2.rs  after_dir.rs  apply.rs  apply_edit.rs  arglist.rs  audio.rs  auto_session.rs  autocmd.rs  autocmd_types.rs  autocommand.rs  autocommands.rs  buffer.rs  buffer_list.rs  buffer_manager.rs  buffer_options.rs  buffer_state.rs  buffer_tests.rs  buffers.rs  case_ops_tests.rs  change.rs  change_list.rs  change_types.rs  changelist.rs  cjk_support.rs  clipboard.rs  clipboard_types.rs  cmdline.rs  cmdline_completion.rs  cmdline_completion_ctx.rs  cmdline_dispatch.rs  command.rs  command_dispatch.rs  command_dispatch_ext.rs  command_dispatch_tabs.rs  command_history.rs  command_line_state.rs  command_parse.rs  commands.rs  (+262 more)
src/crates/kjxlkj-core-state/tests/: advanced_editing.rs  autocommands.rs  autopairs.rs  boundary_tests_1.rs  boundary_tests_2.rs  boundary_tests_3.rs  buffer_features.rs  cmdline.rs  cmdline_options.rs  command_mode.rs  command_parsing.rs  command_tests.rs  comprehensive.rs  config_tests.rs  contract_assertions.rs  contract_tests.rs  cursor_movement.rs  digraphs.rs  dispatch_core.rs  dispatch_features.rs  dispatch_tests.rs  display_commands.rs  editing_invariants.rs  editor_core.rs  editor_state_tests.rs  ex_commands.rs  execute_normal.rs  explorer_tests.rs  extended.rs  feature_batch.rs  feature_tests.rs  features.rs  headless_e2e_tests.rs  insert_mode.rs  insert_mode_features.rs  integration.rs  integration_tests.rs  large_file.rs  latency_probes.rs  leader_cmdline.rs  (+24 more)
src/crates/kjxlkj-core-text/: Cargo.toml
src/crates/kjxlkj-core-text/src/: buffer.rs  buffer_content.rs  buffer_content_ops.rs  buffer_content_tests.rs  buffer_features.rs  buffer_full.rs  buffer_ops.rs  buffer_tests.rs  char_class.rs  display_width.rs  grapheme.rs  grapheme_line.rs  grapheme_tests.rs  large_buffer.rs  lib.rs  line.rs  line_ops.rs  manipulation.rs  paragraph.rs  rope.rs  rope_ext.rs  rope_tests.rs  rope_text.rs  segment.rs  sentence.rs  snapshot.rs  streaming.rs  streaming_io.rs  syntax_region.rs  syntax_types.rs  tests.rs  text_buffer.rs  text_objects_full.rs  text_stats.rs  text_utils.rs  width.rs  word.rs  word_end.rs  word_extra.rs  word_tests.rs
src/crates/kjxlkj-core-text/tests/: buffer.rs  buffer_operations.rs  comprehensive.rs  extended.rs  text_buffer_tests.rs  word.rs
src/crates/kjxlkj-core-ui/: Cargo.toml
src/crates/kjxlkj-core-ui/src/: accessibility.rs  buffer_snapshot.rs  buffer_view.rs  cmdline.rs  color.rs  colorcolumn.rs  completion.rs  completion_item.rs  completion_kind.rs  component.rs  (+72 more)
src/crates/kjxlkj-core-undo/: Cargo.toml
src/crates/kjxlkj-host/: Cargo.toml
src/crates/kjxlkj-input/: Cargo.toml
src/crates/kjxlkj-render/: Cargo.toml
src/crates/kjxlkj-service-fs/: Cargo.toml
src/crates/kjxlkj-service-git/: Cargo.toml
src/crates/kjxlkj-service-index/: Cargo.toml
src/crates/kjxlkj-service-lsp/: Cargo.toml
src/crates/kjxlkj-service-terminal/: Cargo.toml
src/crates/kjxlkj-services/: Cargo.toml
(+3332 files in other folders)
