[package]
name = "kjxlkj"
version = "0.1.0"
edition = "2021"
license = "MIT"
autobins = false

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["fs", "macros", "rt-multi-thread"] }
uuid = { version = "1.11.0", features = ["v4"] }

[[bin]]
name = "kjxlkj"
path = "src/bin/kjxlkj.rs"

[[bin]]
name = "kjxlkj-app"
path = "src/main.rs"
