[package]
name = "kjxlkj"
version = "0.1.0"
edition = "2021"
authors = ["kjxlkj contributors"]
description = "Deterministic record service for LLM-operated workflows"
license = "MIT"

[[bin]]
name = "kjxlkj"
path = "src/main.rs"

[[test]]
name = "integration"
path = "src/tests/integration.rs"

[dependencies]
# Web framework
actix-web = "4"
actix-rt = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# PostgreSQL
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4"] }
deadpool-postgres = "0.14"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
pulldown-cmark = "0.13"

# Password hashing
bcrypt = "0.16"

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Validation
regex = "1"
once_cell = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"

# Async traits
async-trait = "0.1"

[dev-dependencies]
actix-http = "3"
actix-web = { version = "4", features = ["macros"] }
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
