[package]
name = "kjxlkj"
version = "0.1.0"
edition = "2021"
authors = ["kjxlkj contributors"]
description = "Deterministic resource service for LLM-operated workflows"
license = "Apache-2.0"

[[bin]]
name = "kjxlkj"
path = "src/main.rs"

[[test]]
name = "integration"
path = "src/tests/integration.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["compression-full", "limit"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# PostgreSQL
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = "0.14"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
pulldown-cmark = "0.13"
url = "2"
ammonia = "4"
aws-config = "1"
aws-sdk-s3 = "1"
aws-credential-types = "1"
futures-util = "0.3"
sha2 = "0.10"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
webp = "0.3"

# Password hashing
argon2 = "0.5"

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Validation
regex = "1"
once_cell = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"

# Async traits
async-trait = "0.1"

# Temporary upload spill files
tempfile = "3"

[dev-dependencies]

[profile.release]
lto = true
codegen-units = 1
strip = true
