[package]
name = "kjxlkj-benches"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
kjxlkj-core-ui = { path = "../src/crates/kjxlkj-core-ui" }
kjxlkj-core-types = { path = "../src/crates/kjxlkj-core-types" }
kjxlkj-core-text = { path = "../src/crates/kjxlkj-core-text" }
kjxlkj-render = { path = "../src/crates/kjxlkj-render" }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "performance"
harness = false
