[package]
name = "kjxlkj-cmd"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
description = "Command-line parsing and execution for kjxlkj editor"

[dependencies]
kjxlkj-core-types = { path = "../kjxlkj-core-types" }
kjxlkj-core-edit = { path = "../kjxlkj-core-edit" }
kjxlkj-core-mode = { path = "../kjxlkj-core-mode" }

[dev-dependencies]
