[package]
name = "kjxlkj-core-edit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
kjxlkj-core-types = { path = "../kjxlkj-core-types" }
kjxlkj-core-text = { path = "../kjxlkj-core-text" }
kjxlkj-core-undo = { path = "../kjxlkj-core-undo" }

[dev-dependencies]
