[package]
name = "kjxlkj-core-edit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Editing primitives and operators"

[dependencies]
kjxlkj-core-types = { path = "../kjxlkj-core-types" }
kjxlkj-core-text = { path = "../kjxlkj-core-text" }
