[package]
name = "kjxlkj-core-edit"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
kjxlkj-core-types = { path = "../kjxlkj-core-types" }
kjxlkj-core-text = { path = "../kjxlkj-core-text" }
serde = { workspace = true }
thiserror = { workspace = true }
unicode-width = { workspace = true }
