[package]
name = "kjxlkj-core-mode"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Modal state machines for kjxlkj editor"

[dependencies]
kjxlkj-core-types = { path = "../kjxlkj-core-types" }
kjxlkj-core-edit = { path = "../kjxlkj-core-edit" }
serde = { workspace = true }
