[package]
name = "kjxlkj-core-state"
version = "0.1.0"
edition = "2021"

[dependencies]
kjxlkj-core-types = { path = "../kjxlkj-core-types" }
kjxlkj-core-text = { path = "../kjxlkj-core-text" }
kjxlkj-core-edit = { path = "../kjxlkj-core-edit" }
kjxlkj-core-mode = { path = "../kjxlkj-core-mode" }
kjxlkj-core-undo = { path = "../kjxlkj-core-undo" }
kjxlkj-core-ui = { path = "../kjxlkj-core-ui" }
serde = { workspace = true }
serde_json = { workspace = true }
unicode-segmentation = { workspace = true }
