[package]
name = "kjxlkj-core-state"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kjxlkj-core-types = { path = "../kjxlkj-core-types" }
kjxlkj-core-text = { path = "../kjxlkj-core-text" }
kjxlkj-core-edit = { path = "../kjxlkj-core-edit" }
kjxlkj-core-mode = { path = "../kjxlkj-core-mode" }
kjxlkj-core-undo = { path = "../kjxlkj-core-undo" }
kjxlkj-core-ui = { path = "../kjxlkj-core-ui" }
ropey = { workspace = true }
regex = { workspace = true }
unicode-segmentation = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
