[package]
name = "kjxlkj-core-state"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kjxlkj-core-types = { path = "../kjxlkj-core-types" }
kjxlkj-core-text = { path = "../kjxlkj-core-text" }
kjxlkj-core-edit = { path = "../kjxlkj-core-edit" }
kjxlkj-core-mode = { path = "../kjxlkj-core-mode" }
kjxlkj-core-undo = { path = "../kjxlkj-core-undo" }
kjxlkj-core-ui = { path = "../kjxlkj-core-ui" }
kjxlkj-input = { path = "../kjxlkj-input" }
ropey = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
kjxlkj-service-terminal = { path = "../kjxlkj-service-terminal" }
