[package]
name = "kjxlkj-core-text"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Text model backed by a rope data structure"

[dependencies]
kjxlkj-core-types = { path = "../kjxlkj-core-types" }
ropey = { workspace = true }
unicode-segmentation = { workspace = true }
unicode-width = { workspace = true }
