[package]
name = "kjxlkj-core-text"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
kjxlkj-core-types = { path = "../kjxlkj-core-types" }
ropey = { workspace = true }
unicode-segmentation = { workspace = true }
unicode-width = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
