[package]
name = "kjxlkj-core-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "UI model types and snapshot structures"

[dependencies]
kjxlkj-core-types = { path = "../kjxlkj-core-types" }
kjxlkj-core-text = { path = "../kjxlkj-core-text" }
