[package]
name = "kjxlkj-core-undo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Undo/redo system for kjxlkj editor"

[dependencies]
kjxlkj-core-types = { path = "../kjxlkj-core-types" }
kjxlkj-core-edit = { path = "../kjxlkj-core-edit" }
