[package]
name = "kjxlkj-core-undo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Undo/redo model for kjxlkj editor"

[dependencies]
kjxlkj-core-types = { path = "../kjxlkj-core-types" }
kjxlkj-core-edit = { path = "../kjxlkj-core-edit" }
serde = { workspace = true }
