[package]
name = "kjxlkj-core"
version = "0.1.0"
edition = "2021"
description = "Core facade for kjxlkj editor"
license = "MIT"

[dependencies]
kjxlkj-core-types = { path = "../kjxlkj-core-types" }
kjxlkj-core-text = { path = "../kjxlkj-core-text" }
kjxlkj-core-undo = { path = "../kjxlkj-core-undo" }
kjxlkj-core-edit = { path = "../kjxlkj-core-edit" }
kjxlkj-core-mode = { path = "../kjxlkj-core-mode" }
kjxlkj-core-ui = { path = "../kjxlkj-core-ui" }
kjxlkj-core-state = { path = "../kjxlkj-core-state" }

[dev-dependencies]
