[package]
name = "kjxlkj-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core facade — re-exports all core sub-crates"

[dependencies]
kjxlkj-core-types = { path = "../kjxlkj-core-types" }
kjxlkj-core-text = { path = "../kjxlkj-core-text" }
kjxlkj-core-edit = { path = "../kjxlkj-core-edit" }
kjxlkj-core-mode = { path = "../kjxlkj-core-mode" }
kjxlkj-core-undo = { path = "../kjxlkj-core-undo" }
kjxlkj-core-ui = { path = "../kjxlkj-core-ui" }
kjxlkj-core-state = { path = "../kjxlkj-core-state" }
kjxlkj-service-fs = { path = "../kjxlkj-service-fs" }

[dev-dependencies]
kjxlkj-service-lsp = { path = "../kjxlkj-service-lsp" }
kjxlkj-service-git = { path = "../kjxlkj-service-git" }
serde_json = { workspace = true }
