[package]
name = "kjxlkj-host"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
kjxlkj-core-types = { path = "../kjxlkj-core-types" }
kjxlkj-core-state = { path = "../kjxlkj-core-state" }
kjxlkj-input = { path = "../kjxlkj-input" }
kjxlkj-render = { path = "../kjxlkj-render" }
crossterm = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
