[package]
name = "kjxlkj-host"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Terminal host integration — raw mode, resize, lifecycle"

[dependencies]
kjxlkj-core-types = { path = "../kjxlkj-core-types" }
crossterm = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
