[package]
name = "kjxlkj-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
kjxlkj-core = { path = "../kjxlkj-core" }
kjxlkj-core-types = { path = "../kjxlkj-core-types" }
kjxlkj-core-state = { path = "../kjxlkj-core-state" }
kjxlkj-input = { path = "../kjxlkj-input" }
kjxlkj-render = { path = "../kjxlkj-render" }
kjxlkj-services = { path = "../kjxlkj-services" }
tokio = { workspace = true }
crossterm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
