[package]
name = "kjxlkj-input"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Terminal input decoding — crossterm events to editor key events"

[dependencies]
kjxlkj-core-types = { path = "../kjxlkj-core-types" }
crossterm = { workspace = true }
