[package]
name = "kjxlkj-render"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
kjxlkj-core-types = { path = "../kjxlkj-core-types" }
kjxlkj-core-ui = { path = "../kjxlkj-core-ui" }
kjxlkj-core-text = { path = "../kjxlkj-core-text" }
crossterm = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
unicode-width = { workspace = true }
