[package]
name = "kjxlkj-render"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kjxlkj-core-types = { path = "../kjxlkj-core-types" }
kjxlkj-core-ui = { path = "../kjxlkj-core-ui" }
crossterm = { workspace = true }
tokio = { workspace = true }
unicode-width = { workspace = true }
unicode-segmentation = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
