[package]
name = "kjxlkj-render"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kjxlkj-core-types = { path = "../kjxlkj-core-types" }
kjxlkj-core-ui = { path = "../kjxlkj-core-ui" }
crossterm = { workspace = true }
ropey = { workspace = true }
unicode-segmentation = { workspace = true }
unicode-width = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
