[package]
name = "kjxlkj-service-fs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Filesystem watch service — monitors file changes"

[dependencies]
kjxlkj-core-types = { path = "../kjxlkj-core-types" }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
