[package]
name = "kjxlkj-service-git"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Git service — repository status, diff, blame"

[dependencies]
kjxlkj-core-types = { path = "../kjxlkj-core-types" }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
