[package]
name = "kjxlkj-service-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "File indexing service for kjxlkj editor"

[dependencies]
kjxlkj-core-types = { path = "../kjxlkj-core-types" }
kjxlkj-services = { path = "../kjxlkj-services" }
tokio = { workspace = true }
