[package]
name = "kjxlkj-service-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Indexing service for kjxlkj editor"

[dependencies]
kjxlkj-core-types = { path = "../kjxlkj-core-types" }
tokio = { workspace = true }
anyhow = { workspace = true }
