[package]
name = "kjxlkj-service-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
kjxlkj-core-types = { path = "../kjxlkj-core-types" }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
