[package]
name = "kjxlkj-service-terminal"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Terminal/PTY service — embedded terminal emulation"

[dependencies]
kjxlkj-core-types = { path = "../kjxlkj-core-types" }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
