[package]
name = "kjxlkj-services"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
kjxlkj-core-types = { path = "../kjxlkj-core-types" }
kjxlkj-service-lsp = { path = "../kjxlkj-service-lsp" }
kjxlkj-service-git = { path = "../kjxlkj-service-git" }
kjxlkj-service-index = { path = "../kjxlkj-service-index" }
kjxlkj-service-fs = { path = "../kjxlkj-service-fs" }
kjxlkj-service-terminal = { path = "../kjxlkj-service-terminal" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
