[package]
name = "kjxlkj-services"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kjxlkj-core-types = { path = "../kjxlkj-core-types" }
kjxlkj-service-fs = { path = "../kjxlkj-service-fs" }
kjxlkj-service-git = { path = "../kjxlkj-service-git" }
kjxlkj-service-index = { path = "../kjxlkj-service-index" }
kjxlkj-service-lsp = { path = "../kjxlkj-service-lsp" }
kjxlkj-service-terminal = { path = "../kjxlkj-service-terminal" }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
