[package]
name = "kjxlkj"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Neovim-inspired TUI text editor — binary entrypoint"

[[bin]]
name = "kjxlkj"
path = "src/main.rs"

[lib]
name = "kjxlkj"
path = "src/lib.rs"

[dependencies]
kjxlkj-core = { path = "../kjxlkj-core" }
kjxlkj-core-types = { path = "../kjxlkj-core-types" }
kjxlkj-core-state = { path = "../kjxlkj-core-state" }
kjxlkj-host = { path = "../kjxlkj-host" }
kjxlkj-input = { path = "../kjxlkj-input" }
kjxlkj-render = { path = "../kjxlkj-render" }
kjxlkj-services = { path = "../kjxlkj-services" }
tokio = { workspace = true }
crossterm = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
