[package]
name = "kjxlkj"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kjxlkj"
path = "src/main.rs"

[dependencies]
kjxlkj-core = { path = "../kjxlkj-core" }
kjxlkj-core-types = { path = "../kjxlkj-core-types" }
kjxlkj-core-ui = { path = "../kjxlkj-core-ui" }
kjxlkj-host = { path = "../kjxlkj-host" }
kjxlkj-input = { path = "../kjxlkj-input" }
kjxlkj-render = { path = "../kjxlkj-render" }
kjxlkj-services = { path = "../kjxlkj-services" }
clap = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
