[package]
name = "kjxlkj-server"
edition.workspace = true
version.workspace = true

[[bin]]
name = "kjxlkj"
path = "src/main.rs"

[dependencies]
kjxlkj-domain = { path = "../../domain/kjxlkj-domain" }
kjxlkj-db = { path = "../../db/kjxlkj-db" }
kjxlkj-auth = { path = "../../auth/kjxlkj-auth" }
kjxlkj-rbac = { path = "../../rbac/kjxlkj-rbac" }
kjxlkj-search = { path = "../../search/kjxlkj-search" }
kjxlkj-workspace = { path = "../../workspace/kjxlkj-workspace" }
kjxlkj-automation = { path = "../../automation/kjxlkj-automation" }
kjxlkj-http = { path = "../../http/kjxlkj-http" }
kjxlkj-ws = { path = "../../ws/kjxlkj-ws" }
actix-web = { workspace = true }
actix-files = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
