[package]
name = "kjxlkj-server"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
kjxlkj-domain = { path = "../../domain/kjxlkj-domain" }
kjxlkj-db = { path = "../../db/kjxlkj-db" }
kjxlkj-auth = { path = "../../auth/kjxlkj-auth" }
kjxlkj-rbac = { path = "../../rbac/kjxlkj-rbac" }
kjxlkj-workspace = { path = "../../workspace/kjxlkj-workspace" }
kjxlkj-search = { path = "../../search/kjxlkj-search" }
kjxlkj-automation = { path = "../../automation/kjxlkj-automation" }
kjxlkj-http = { path = "../../http/kjxlkj-http" }
kjxlkj-ws = { path = "../../ws/kjxlkj-ws" }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
