[package]
name = "kjxlkj-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "kjxlkj-server"
path = "src/main.rs"

[dependencies]
kjxlkj-domain = { path = "../../domain/kjxlkj-domain" }
kjxlkj-db = { path = "../../db/kjxlkj-db" }
kjxlkj-http = { path = "../../http/kjxlkj-http" }
kjxlkj-ws = { path = "../../ws/kjxlkj-ws" }
kjxlkj-auth = { path = "../../auth/kjxlkj-auth" }
kjxlkj-automation = { path = "../../automation/kjxlkj-automation" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
