[package]
name = "kjxlkj-test-harness"
version = "0.1.0"
edition = "2021"
description = "PTY E2E test harness for kjxlkj"
license = "MIT OR Apache-2.0"

[dependencies]
kjxlkj-core-types = { path = "../../core/kjxlkj-core-types" }
kjxlkj-core-mode = { path = "../../core/kjxlkj-core-mode" }
kjxlkj-core-state = { path = "../../core/kjxlkj-core-state" }
kjxlkj-core-text = { path = "../../core/kjxlkj-core-text" }
kjxlkj-service-explorer = { path = "../../services/kjxlkj-service-explorer" }
kjxlkj-service-terminal = { path = "../../services/kjxlkj-service-terminal" }

[dev-dependencies]
