[package]
name = "kjxlkj"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "kjxlkj"
path = "src/main.rs"

[dependencies]
kjxlkj-core = { path = "../../core/kjxlkj-core" }
kjxlkj-core-types = { path = "../../core/kjxlkj-core-types" }
kjxlkj-core-state = { path = "../../core/kjxlkj-core-state" }
kjxlkj-host = { path = "../../platform/kjxlkj-host" }
kjxlkj-input = { path = "../../platform/kjxlkj-input" }
kjxlkj-render = { path = "../../platform/kjxlkj-render" }
kjxlkj-services = { path = "../../services/kjxlkj-services" }
kjxlkj-core-ui = { path = "../../core/kjxlkj-core-ui" }
tokio = { workspace = true }
crossterm = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
