[package]
name = "kjxlkj"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = { workspace = true }
kjxlkj-core-mode = { path = "../../core/kjxlkj-core-mode" }
kjxlkj-core-state = { path = "../../core/kjxlkj-core-state" }
kjxlkj-input = { path = "../../platform/kjxlkj-input" }
kjxlkj-render = { path = "../../platform/kjxlkj-render" }
