[package]
name = "kjxlkj"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
kjxlkj-core-types = { path = "../../core/kjxlkj-core-types" }
kjxlkj-core-state = { path = "../../core/kjxlkj-core-state" }
kjxlkj-host = { path = "../../platform/kjxlkj-host" }
kjxlkj-input = { path = "../../platform/kjxlkj-input" }
kjxlkj-render = { path = "../../platform/kjxlkj-render" }
tokio = { workspace = true }
crossterm = { workspace = true }
tokio-stream = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
