[package]
name = "kjxlkj-auth"
edition.workspace = true
version.workspace = true

[dependencies]
kjxlkj-domain = { path = "../../domain/kjxlkj-domain" }
kjxlkj-db = { path = "../../db/kjxlkj-db" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
