[package]
name = "kjxlkj-auth"
edition.workspace = true
version.workspace = true

[dependencies]
kjxlkj-domain = { path = "../../domain/kjxlkj-domain" }
kjxlkj-db = { path = "../../db/kjxlkj-db" }
argon2 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
