[package]
name = "kjxlkj-automation"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
kjxlkj-domain = { path = "../../domain/kjxlkj-domain" }
kjxlkj-db = { path = "../../db/kjxlkj-db" }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
quick-xml = { workspace = true }
sha2 = { workspace = true }
