[package]
name = "kjxlkj-core-state"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
kjxlkj-core-edit = { path = "../kjxlkj-core-edit" }
kjxlkj-core-mode = { path = "../kjxlkj-core-mode" }
kjxlkj-core-text = { path = "../kjxlkj-core-text" }
kjxlkj-core-types = { path = "../kjxlkj-core-types" }
kjxlkj-core-ui = { path = "../kjxlkj-core-ui" }
kjxlkj-core-undo = { path = "../kjxlkj-core-undo" }
serde.workspace = true
thiserror.workspace = true

