[package]
name = "kjxlkj-core-text"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
kjxlkj-core-types = { path = "../kjxlkj-core-types" }
ropey.workspace = true
serde.workspace = true
thiserror.workspace = true
unicode-segmentation.workspace = true

[dev-dependencies]
serde_json.workspace = true

