[package]
name = "kjxlkj-db"
edition.workspace = true
version.workspace = true

[dependencies]
kjxlkj-domain = { path = "../../domain/kjxlkj-domain" }
sqlx = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
