[package]
name = "kjxlkj-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kjxlkj-domain = { path = "../../domain/kjxlkj-domain" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
sqlx.workspace = true
tracing.workspace = true
once_cell.workspace = true
